--- a/rollover.css
+++ b/rollover.css
@@ -1,29 +1,32 @@
 body {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 90%;
-    background-color: white;
-    width: 790px;
-    margin: 0 auto;
-    border: 3px solid blue;
-    padding: 1em;
+  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
+  height: 100vh;
+  display: flex;
+  place-content: center;
+  align-items: center;
+  background: #292626;
+  color: #fff;
 }
 h1 {
-    color: blue;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 p {
-    margin: 0;
-    padding: .5em 0;
-    text-align: center;	
+  margin: 0;
+  padding: 0.5em 0;
+  text-align: center;
 }
 ul {
-	padding-left: 0;
-	text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
 }
 li {
-    display: inline;
+  display: inline;
 }
 
-
+img:hover {
+  transform: scale(1.1);
+}
